--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Venam's Blog
 email: patrick@iotek.org
 description: > # this means to ignore newlines until "baseurl:"
   A boring blog about ideas and concepts I think about.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://venam.nixers.net" # the base hostname & protocol for your site
 github_username:  venam
 highlighter: pygments
 
