--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Venam's Blog
 email: patrick@iotek.org
 description: > # this means to ignore newlines until "baseurl:"
-  A boring blog about ideas and concepts I think about.
+  A deliberate person's ideas and concepts
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://venam.nixers.net" # the base hostname & protocol for your site
 github_username:  venam
