--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,12 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://venam.nixers.net" # the base hostname & protocol for your site
 github_username:  venam
-highlighter: rouge
 
-# Build settings
 markdown: kramdown
+
+plugins:
+        - jekyll-sitemap
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
